--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_storage: ^2.0.3
   form_field_validator: ^1.1.0
   parse_server_sdk_flutter: ^3.1.2
+  firebase_core: ^1.18.0
 
 dev_dependencies:
   flutter_test:
