--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   parse_server_sdk_flutter: ^3.1.2
   firebase_core: ^1.18.0
   flutter_switch: ^0.3.2
-
+  flutter_rating_bar: ^4.0.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
